; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_easy.c_conn_upkeep.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_easy.c_conn_upkeep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.connectdata*, i32)* }

@CONNCHECK_KEEPALIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*, i8*)* @conn_upkeep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @conn_upkeep(%struct.connectdata* %0, i8* %1) #0 {
  %3 = alloca %struct.connectdata*, align 8
  %4 = alloca i8*, align 8
  store %struct.connectdata* %0, %struct.connectdata** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %7 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32 (%struct.connectdata*, i32)*, i32 (%struct.connectdata*, i32)** %9, align 8
  %11 = icmp ne i32 (%struct.connectdata*, i32)* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %2
  %13 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %14 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32 (%struct.connectdata*, i32)*, i32 (%struct.connectdata*, i32)** %16, align 8
  %18 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %19 = load i32, i32* @CONNCHECK_KEEPALIVE, align 4
  %20 = call i32 %17(%struct.connectdata* %18, i32 %19)
  br label %21

21:                                               ; preds = %12, %2
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
